# plans-vision-api

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  Makefile  README.md  README_SNIPPET_DOC_VERIFICATION.txt  README_SNIPPET_PHASE3_3.md  pyproject.toml  test-ui.html
docs/: 00_READ_FIRST.md  01_MCAF_RULES.md  02_PROJECT_MAP.md  04_DEV_CHECKLIST.md  05_TEST_GATES_MASTER.md  06_WHAT_IS_FROZEN.md  08_NEXT_STEPS.md  API_CONTRACT_Render_v3.md  API_CONTRACT_v1.md  API_CONTRACT_v2.md  AUTONOMOUS_MODE.md  CHANGELOG.md  DECISIONS_Phase3_2_ProvisionalMode.md  DECISIONS_Phase3_3.md  DECISIONS_Phase3_4.md  DECISIONS_Render.md  DOC_GATES.md  DOC_STATUS.md  DOC_STATUS_PHASE3_3.md  ERRORS.md  ERRORS_PHASE3_3.md  ERRORS_PROVISIONAL.md  FEATURE_BuildGuide.md  FEATURE_ExtractObjects.md  FEATURE_Phase3_2_ProvisionalMode.md  FEATURE_Phase3_3_SpatialRoomLabeling.md  FEATURE_Render_MasterPDF.md  PHASE2_DECISIONS.md  PROJECT_STATUS.md  RELEASE_CRITERIA.md  RUNBOOK.md  SECURITY.md  SESSION_PLAYBOOK.md  SPEC.md  START_PROMPT.md  START_PROMPT_PHASE3_3.md  TEST_GATES.md  TEST_GATES_PHASE2.md  TEST_GATES_PHASE3_3.md  TEST_GATES_PROVISIONAL.md  (+9 more)
scripts/: dev_run.sh  e2e_tokens_test.py  phase3_7_gate_check.py  test_summary.sh
src/: __init__.py  config.py  logging.py  main.py
testdata/: README.md  generate_fixtures.py
tests/: __init__.py  conftest.py  test_api.py  test_classifier_regression.py  test_errors.py  test_extraction.py  test_image_metadata.py  test_middleware.py  test_models.py  test_p0_persistence.py  test_page_selection_full_tokens.py  test_phase3_3_disambiguation.py  (+10 more)
(+70 files in other folders)
